minor css :->; fix
safari gave a minor warning about this colon. Looks wrong to me

--- a/base.css
+++ b/base.css
@@ -627,7 +627,7 @@ table.prose td,
 table.prose th,
 .prose table th {
   background-color:#f8f8f8;
-  background-color: rgba(0,0,0,.05):
+  background-color: rgba(0,0,0,.05);
   }
 
 .prose ul {
